# WHATSAPP-MCP-CLIENT

./: .env.sample  Client.py  README.md  callbacks.py  client_simple.py  client_v1.py  client_v2.py  client_v3.py  client_v4.py  mcp_servers.py  pyproject.toml  requirements.txt
agent/: agent_data_extraction.py  agent_logging.py
prompt_library/: prompt.py
utils/: cost_calculation.py  env_setup.py  json_history.py
